--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Welcome to rhiannakemi's website!
+description: Feel free to watch my progress on my coding course :)
